--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "expo": "~52.0.24",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-confetti-cannon": "^1.5.2",
+    "expo-notifications": "~0.29.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
