--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
     "expo": "~52.0.24",
+    "expo-notifications": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-confetti-cannon": "^1.5.2",
-    "expo-notifications": "~0.29.11"
+    "react-native-confetti-cannon": "^1.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "jest": "^29.7.0"
   },
   "private": true
 }
