--- a/package.json
+++ b/package.json
@@ -10,11 +10,26 @@
     "web": "expo start --web",
     "test": "jest"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "transform": {
+      "^.+\\.(js)$": ["babel-jest", { "plugins": ["babel-plugin-syntax-hermes-parser"] }],
+      "^.+\\.(ts|tsx)$": "babel-jest"
+    }
+  
+  },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "expo": "~52.0.24",
     "expo-notifications": "~0.29.11",
     "expo-status-bar": "~2.0.0",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-confetti-cannon": "^1.5.2"
@@ -23,7 +38,14 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
-    "jest": "^29.7.0"
+    "@testing-library/react-native": "^13.0.0",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "babel-preset-react-native": "^4.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.2.5"
   },
   "private": true
 }
